feat: Generate returners badge (#207)
